[project]
name = "linkbay-billing"
version = "0.1.0"
description = "Enterprise-grade invoicing and billing library for multi-tenant SaaS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alessio Quagliara", email = "alessio@linkbay.com"}
]
keywords = [
    "billing",
    "invoicing",
    "vat",
    "e-invoice",
    "fatturapa",
    "peppol",
    "multi-tenant",
    "fiscal-compliance",
    "taxation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pdf = [
    "jinja2>=3.0.0",
    "weasyprint>=60.0",
]
einvoice = [
    "lxml>=4.9.0",
]
fastapi = [
    "fastapi>=0.100.0",
]
all = [
    "jinja2>=3.0.0",
    "weasyprint>=60.0",
    "lxml>=4.9.0",
    "fastapi>=0.100.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/alessioquagliara/linkbay-billing"
Repository = "https://github.com/alessioquagliara/linkbay-billing"
Documentation = "https://github.com/alessioquagliara/linkbay-billing#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["linkbay_billing*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"